# VoyeSeq

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Constants.hpp  README.md  VoyeRenderer.cpp  VoyeSeqUI.cpp  lv2_ttl_generator
.src_backup/: CMakeCache.txt  FiraMono.h  SequencerEngine.hpp  VoyeSeqUI.hpp  cmake_install.cmake
.src_backup/backup/: DistrhoPluginInfo.h  Makefile  PatternModel.hpp  VoyeRenderer.cpp  VoyeRenderer.hpp  VoyeSeqPlugin.cpp  VoyeSeqPlugin.hpp  VoyeSeqUI.cpp  VoyeSeqUI.hpp  VoyeUIUtils.hpp
.src_backup/backup-v1.0/: DistrhoPluginInfo.h  PatternModel.hpp  VoyeSeqPlugin.cpp
.src_backup/backup/backup-older/: CMakeLists.txt  DistrhoPluginInfo.h  VoyeSeqPlugin.cpp  VoyeSeqUI.cpp
.src_backup/distrho/: cmake_install.cmake
distrho/: cmake_install.cmake
example/: CMakeLists.txt  ExampleUIStates.cpp
example_bld/: CMakeCache.txt  Makefile  cmake_install.cmake
example_bld/distrho/: Makefile  cmake_install.cmake
src/: CMakeCache.txt  CMakeLists.txt  Constants.hpp  DistrhoPluginInfo.h  Makefile  PatternModel.hpp  README.md  SequencerEngine.hpp  VoyeRenderer.cpp  VoyeRenderer.hpp  VoyeSeqPlugin.cpp  VoyeSeqPlugin.hpp  VoyeSeqUI.cpp  VoyeSeqUI.hpp  VoyeUIUtils.hpp
src/distrho/: Makefile
src/dpf/.github/workflows/: cmake.yml
src/dpf/cmake/: DPF-plugin.cmake
src/dpf/dgl/: Makefile  OpenGL.hpp
src/dpf/dgl/src/: OpenGL.cpp  OpenGL3.cpp
src/dpf/distrho/: DistrhoUI_win32.cpp
src/dpf/examples/CairoUI/: DistrhoPluginInfo.h
